--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js-commando": "^0.10.0",
     "escape-string-regexp": "^1.0.5",
     "fortnite": "^4.1.1",
+    "ffmpeg-binaries": "^3.2.2-3",
     "fs": "0.0.1-security",
     "google-translate-api": "^2.3.0",
     "http": "0.0.0",
